fix(TableHeaderLabel): Prevent shrink of sort indicator on header wrap

--- a/packages/axiom-components/src/Table/Table.css
+++ b/packages/axiom-components/src/Table/Table.css
@@ -127,6 +127,10 @@
   transition: color var(--transition-time-base) var(--transition-function);
 }
 
+.ax-table__header-icon {
+  flex-shrink: 0;
+}
+
 .ax-table__header:only-child .ax-table__header-label {
   border-bottom: var(--component-border-width-medium) solid var(--color-theme-border);
 }
